# SpectralKeys

./: .gitignore  CMakeLists.txt  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Audio/: AudioFileManager.cpp  AudioFileManager.h  BpmDetector.cpp  BpmDetector.h  KeyDetector.cpp  KeyDetector.h  OnsetDetector.cpp  OnsetDetector.h  PitchDetector.cpp  PitchDetector.h  SpectrogramGenerator.cpp  SpectrogramGenerator.h
Source/MIDI/: AudioToMidiConverter.cpp  AudioToMidiConverter.h  MidiExporter.cpp  MidiExporter.h  MidiSynthesizer.cpp  MidiSynthesizer.h
Source/UI/: DropZoneComponent.cpp  DropZoneComponent.h  InfoDisplayComponent.cpp  InfoDisplayComponent.h  MidiDragComponent.cpp  MidiDragComponent.h  ParameterControls.cpp  ParameterControls.h  PianoRollComponent.cpp  PianoRollComponent.h  SpectrogramComponent.cpp  SpectrogramComponent.h  TransportControls.cpp  TransportControls.h
Source/Utils/: Constants.h  MathUtils.h
